# itack

./: CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md
.claude-plugin/: marketplace.json
.itack/: .gitignore  1.md  2.md  2026-01-25-issue-001.md  2026-01-25-issue-002.md  2026-01-25-issue-003.md  2026-01-25-issue-004.md  2026-01-25-issue-005.md  2026-01-25-issue-006.md  2026-01-25-issue-007.md  2026-01-25-issue-008.md  2026-01-25-issue-009.md  2026-01-25-issue-010.md  2026-01-25-issue-012.md  2026-01-26-issue-011.md  2026-01-26-issue-012.md  2026-01-26-issue-013.md  2026-01-26-issue-014.md  2026-01-26-issue-015.md  2026-01-27-issue-016.md  2026-01-27-issue-017.md  2026-01-27-issue-018.md  2026-01-27-issue-019.md  2026-01-27-issue-020.md  2026-01-28-issue-021.md  2026-01-28-issue-022.md  3.md  4.md  5.md  metadata.toml
docs/: issue-workflow.md
docs/arch/: 2026-01-25-mvp.md
plugins/.claude-plugin/: plugin.json
plugins/itack/: SKILL.md
plugins/skills/itack-basics/: SKILL.md
src/: cli.rs  error.rs  lib.rs  main.rs  output.rs
src/commands/: board.rs  claim.rs  completions.rs  create.rs  depend.rs  doctor.rs  done.rs  edit.rs  init.rs  list.rs  mod.rs  release.rs  search.rs  set_session.rs  show.rs  status.rs  undepend.rs  wontfix.rs
src/core/: config.rs  git.rs  issue.rs  mod.rs  project.rs  status.rs
src/storage/: db.rs  markdown.rs  metadata.rs  mod.rs
tests/: integration.rs
