[package]
name = "itack"
version = "0.1.2"
edition = "2024"
description = "Git-backed issue tracker for multi-agent coordination"
license = "MIT"
repository = "https://github.com/camerondavison/itack"
readme = "README.md"
authors = ["Cameron Davison"]
keywords = ["issue-tracker", "git", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
comfy-table = "7.1"
petname = "2.0"
rand = "0.8"
thiserror = "2.0"
git2 = "0.19"
tempfile = "3.14"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
